# picus

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  Cargo.toml  Dockerfile  README.md  picus.default.toml
crates/cvc5-ff/: Cargo.toml
crates/cvc5-ff-sys/: Cargo.toml  README.md  build.rs
crates/cvc5-ff-sys/src/: lib.rs
crates/cvc5-ff/src/: datatype.rs  grammar.rs  lib.rs  op.rs  parser.rs  proof.rs  result.rs  solver.rs  sort.rs  statistics.rs  synth_result.rs  term.rs  term_manager.rs
crates/cvc5-ff/tests/: smoke.rs
crates/picus/: Cargo.toml
crates/picus-analysis/: Cargo.toml
crates/picus-analysis/src/: cex.rs  constraint_graph.rs  dpvl.rs  dpvl_tests.rs  lib.rs  selector.rs  selector_tests.rs
crates/picus-analysis/src/propagation/: aboz.rs  aboz_tests.rs  baby.rs  basis2.rs  basis2_tests.rs  bim.rs  bim_tests.rs  binary01.rs  binary01_tests.rs  lemma.rs  lemma_tests.rs  linear.rs  linear_tests.rs  mod.rs  range.rs  range_tests.rs  tecomplete.rs  tecomplete_tests.rs  tests.rs
crates/picus-analysis/src/propagation/basis2/: compconstant.rs  compconstant_tests.rs
crates/picus-analysis/tests/: soundness.rs
crates/picus-cli/: Cargo.toml
crates/picus-cli/src/: main.rs
crates/picus-core/: Cargo.toml
crates/picus-core/src/: config.rs  config_tests.rs  lib.rs  poly.rs  poly_tests.rs  profile.rs  profile_tests.rs  timeout.rs  timeout_tests.rs
crates/picus-core/src/ff/: divmask.rs  divmask_tests.rs  field.rs  field_tests.rs  geobucket.rs  geobucket_tests.rs  linalg.rs  linalg_tests.rs  matrix_order.rs  matrix_order_tests.rs  mod.rs  monomial.rs  monomial_tests.rs  polynomial.rs  repr.rs  sparse_geobucket.rs  sparse_geobucket_tests.rs  sparse_monomial.rs  sparse_monomial_tests.rs  sparse_polynomial.rs  sparse_polynomial_tests.rs
crates/picus-core/src/ff/field/: tests.rs
crates/picus-core/src/ff/polynomial/: dense_reduce.rs  dense_reduce_tests.rs  tests.rs
crates/picus-r1cs/: Cargo.toml
crates/picus-r1cs/src/: grammar.rs  grammar_tests.rs  lib.rs  lib_tests.rs  parser.rs  parser_tests.rs  precondition.rs  sym.rs
crates/picus-smt/: Cargo.toml
crates/picus-smt/src/: interpreter.rs  lib.rs  lib_tests.rs  optimizer.rs  poly_ir.rs  poly_ir_tests.rs  query.rs  r1cs_parser.rs  solver.rs
crates/picus-smt/src/backends/: cvc5_ff.rs  cvc5_ff_tests.rs  cvc5_nia.rs  mod.rs  native_ff.rs  native_ff_tests.rs  native_lower.rs  native_lower_tests.rs  tests.rs  z3_nia.rs
crates/picus-smt/tests/: backend_plugin.rs  multi_prime.rs  sparse_lowering.rs
crates/picus-solver/: Cargo.toml
crates/picus-solver/benches/: benchmark_cvc5.sh  benchmark_native.sh  cdclt_bench.rs  smt2_bench.rs  solver_bench.rs
crates/picus-solver/src/: bench_fixtures.rs  bitprop.rs  boolean.rs  boolean_tests.rs  brancher.rs  config.rs  core.rs  core_tests.rs  encoder.rs  field.rs  gb.rs  gb_homog.rs  gb_stats.rs  homog.rs  homog_ring.rs  ideal.rs  incremental.rs  incremental_context.rs  incremental_context_tests.rs  lib.rs  model.rs  parse.rs  poly.rs  profile.rs  rewriter.rs  roots.rs  smt2.rs  split_gb.rs  stats.rs  timeout.rs  tracer.rs
crates/picus-solver/src/cdclt/: atoms.rs  atoms_tests.rs  cnf.rs  cnf_tests.rs  ee_filtered.rs  ee_filtered_tests.rs  equality_engine.rs  equality_engine_tests.rs  ff_theory.rs  ff_theory_incremental.rs  ff_theory_incremental_tests.rs  ff_theory_tests.rs  mod.rs  multi_prime.rs  multi_prime_tests.rs  orchestrator.rs  orchestrator_tests.rs  tests.rs  theory.rs
crates/picus-solver/src/cdclt/ff_theory/: tests.rs
crates/picus-solver/src/ff/: buchberger.rs  divmask.rs  f4.rs  field.rs  geobucket.rs  hilbert.rs  hilbert_tests.rs  mod.rs  monomial.rs  polynomial.rs  repr.rs  repr_oracle.rs  spair.rs  spair_criteria.rs  spair_criteria_tests.rs  spair_tests.rs  sparse_gb.rs  sparse_gb_tests.rs  sparse_geobucket.rs  sparse_monomial.rs  sparse_polynomial.rs  univariate.rs  univariate_tests.rs
crates/picus-solver/src/ff/buchberger/: gvw.rs  gvw_tests.rs  incremental.rs  incremental_tests.rs  mod.rs  signature.rs  signature_tests.rs  spair_criteria.rs  tests.rs
crates/picus-solver/src/ff/f4/: matrix.rs  matrix_tests.rs  mod.rs  tests.rs
crates/picus-solver/src/ff/field/: tests.rs
crates/picus-solver/src/frontend/: bitprop.rs  bitprop_tests.rs  encoder.rs  encoder_tests.rs  encoder_tests_spec.rs  mod.rs  parse.rs  parse_tests.rs  rewriter.rs  rewriter_tests.rs
crates/picus-solver/src/frontend/encoder/: bitsum_extract.rs  bitsum_extract_tests.rs  constraint_system.rs  constraint_system_tests.rs  tests.rs
crates/picus-solver/src/gb/: brancher.rs  brancher_tests.rs  fglm.rs  fglm_tests.rs  gb_homog.rs  gb_homog_tests.rs  homog_ring.rs  homog_ring_tests.rs  ideal.rs  ideal_tests.rs  incremental.rs  incremental_tests.rs  linsolve.rs  linsolve_tests.rs  mod.rs  model.rs  model_tests.rs  roots.rs  roots_tests.rs  tests.rs  tracer.rs  tracer_tests.rs
crates/picus-solver/src/gb/ideal/: engine.rs  engine_tests.rs  tests.rs
crates/picus-solver/src/sat/: clause.rs  clause_tests.rs  lit.rs  lit_tests.rs  mod.rs  solver.rs  solver_tests.rs
crates/picus-solver/src/smt2/: mod.rs  session.rs  session_tests.rs  tests.rs  tests_property.rs  tests_session.rs  tokenizer.rs  tokenizer_tests.rs
crates/picus-solver/src/split_gb/: branching.rs  branching_tests.rs  fixpoint.rs  fixpoint_tests.rs  mod.rs  search.rs  search_tests.rs  tests.rs  tests_hard.rs  tests_prop.rs
crates/picus-solver/tests/: bench_perf.rs  cdclt_regression.rs  cdclt_scenarios.rs  cdclt_vs_dnf_parity.rs  cvc5_extended.rs  cvc5_regression.rs  cvc5_unit_multi_roots.rs  cvc5_unit_parse.rs  cvc5_unit_split_gb.rs  cvc5_unit_uni_roots.rs  integration.rs  multi_root_polysystem_verdicts.rs  probe.rs  qf_ff_corpus_regression.rs  qf_ff_corpus_regression_extended.rs  run_smt2_smoke.rs  strategy_dispatch.rs  timeout.rs  zk_gadget_semantics.rs
crates/picus-solver/tests/common/: mod.rs
crates/picus/src/: lib.rs  tests.rs
crates/picus/tests/: config_default.rs  perf_native_vs_cvc5.rs  r1cs_smoke.rs
docs/: TODO.md  architecture.md  benchmarks.md  building.md  lemmas.md  usage-guide.md  (+3 more)
(+70 files in other folders)
