[workspace]
resolver = "2"
members = [
    "crates/cvc5-ff-sys",
    "crates/cvc5-ff",
    "crates/picus-r1cs",
    "crates/picus-smt",
    "crates/picus-analysis",
    "crates/picus",
    "crates/picus-cli",
    "crates/picus-solver",
]

[workspace.package]
version = "1.7.18"
authors = ["Yanju Chen <chyanju@gmail.com>"]
license = "MIT"
repository = "https://github.com/chyanju/Picus"
edition = "2024"

[workspace.dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
rug = { version = "1.27", default-features = false, features = ["integer", "std"] }
byteorder = "1.5"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
