[package]
name = "cvc5-ff-sys"
version = "0.4.0"
edition = "2024"
build = "build.rs"
links = "cvc5"
license = "MIT"
description = "cvc5 FFI bindings with finite field (CoCoA) support, auto-compiled from source."
# Note: This crate's build script compiles cvc5 with CoCoA (GPLv3).
# The resulting binary is a combined work under GPLv3 when distributed.
# See cvc5's COPYING file for details.

[package.metadata.cvc5]
version = "1.3.4"

[features]
default = ["static"]
parser = []
static = ["dep:glob"]

[build-dependencies]
bindgen = { version = "0.72", default-features = false, features = ["runtime"] }
cc = "1"
toml = "0.8"
convert_case = "0.11"
glob = { version = "0.3", optional = true }

[package.metadata.docs.rs]
features = ["parser", "static"]
