[package]
name = "cvc5-ff"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "High-level Rust bindings for cvc5 with finite field (CoCoA) support."

[features]
default = ["static"]
parser = ["cvc5-ff-sys/parser"]
static = ["cvc5-ff-sys/static"]

[dependencies]
cvc5-ff-sys = { path = "../cvc5-ff-sys" }
