[package]
name = "picus-cli"
description = "Command-line interface for Picus ZK circuit analyzer"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[[bin]]
name = "picus"
path = "src/main.rs"

[dependencies]
picus = { path = "../picus" }
picus-solver = { path = "../picus-solver" }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
owo-colors = "4"
anstream = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
