[package]
name = "picus-cli"
description = "Command-line interface for Picus ZK circuit analyzer"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[[bin]]
name = "picus"
path = "src/main.rs"

[features]
# Forward picus's backend features. `default` mirrors picus
# (cvc5 + z3 on). Pass `--no-default-features` to build a native-only
# CLI that skips the cvc5 / z3 build chains.
default = ["cvc5", "z3"]
native = ["picus/native"]
cvc5 = ["picus/cvc5"]
z3 = ["picus/z3"]

[dependencies]
picus = { path = "../picus", default-features = false }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
owo-colors = "4"
anstream = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
