[package]
name = "picus-cli"
description = "Command-line interface for Picus ZK circuit analyzer"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[[bin]]
name = "picus"
path = "src/main.rs"

[features]
# Default = `native` only. cvc5 and z3 are opt-in: enable with
# `cargo build --features cvc5` / `--features z3` (combine as needed).
default = ["native"]
native = ["picus/native"]
cvc5 = ["picus/cvc5"]
z3 = ["picus/z3"]

[dependencies]
picus = { path = "../picus", default-features = false }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
owo-colors = "4"
anstream = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
signal-hook = "0.3"
