[package]
name = "picus-core"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
num-bigint.workspace = true
num-traits.workspace = true
num-integer.workspace = true
rug.workspace = true
log.workspace = true
