[package]
name = "picus-smt"
description = "SMT solver backends for Picus"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
picus-r1cs = { path = "../picus-r1cs" }
num-bigint = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
inventory = { workspace = true }

# Solver backends
z3 = { version = "0.20", features = ["vendored"] }
cvc5-ff = { path = "../cvc5-ff" }
picus-solver = { path = "../picus-solver" }
