[package]
name = "picus-solver"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
description = "Pure Rust finite field SMT solver for Picus"

[dependencies]
num-bigint.workspace = true
num-traits.workspace = true
num-integer.workspace = true
log.workspace = true
thiserror.workspace = true
feanor-math = { git = "https://github.com/chyanju/feanor-math", rev = "0fb1ea4a6c75a0030812ca1f2877f1343045ab7d", features = ["unstable-enable"] }
oorandom = "11.1"

[dev-dependencies]
env_logger = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "solver_bench"
harness = false
